globus-gssapi-gsi (11.16-1+gt6.@distro@) @distro@; urgency=low

  * Update autoconf script

 -- Globus Toolkit <support@globus.org>  Thu, 28 May 2015 10:22:17 -0400

globus-gssapi-gsi (11.15-1+gt6.@distro@) @distro@; urgency=low

  * Add config file for GSI options
  * Allow configuration of SSL cipher suite
  * Allow server preference for SSL cipher suite ordering
  * Fix thread test to run without unix domain sockets

 -- Globus Toolkit <support@globus.org>  Thu, 28 May 2015 08:00:43 -0400

globus-gssapi-gsi (11.14-1+gt6.@distro@) @distro@; urgency=low

  * doxygen fixes

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 13:29:40 -0500

globus-gssapi-gsi (11.13-2+gt6.@distro@) @distro@; urgency=low

  * Add dependency on openssl

 -- Globus Toolkit <support@globus.org>  Thu, 25 Sep 2014 10:50:57 -0400

globus-gssapi-gsi (11.13-1+gt6.@distro@) @distro@; urgency=low

  * Include more manpages for API
  * Use consistent PREDEFINED in all Doxyfiles
  * Fix dependency version
  * Fix typos and clarify some documentation
  * Quiet some autoconf/automake warnings

 -- Globus Toolkit <support@globus.org>  Thu, 25 Sep 2014 10:50:57 -0400

globus-gssapi-gsi (11.12-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:29 -0400

globus-gssapi-gsi (11.11-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:40 -0400

globus-gssapi-gsi (11.11-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:44 -0400

globus-gssapi-gsi (11.11-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:45 -0400

globus-gssapi-gsi (11.10-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency
