@@ -1,3 +1,9 @@
+globus-gssapi-gsi (11.17-1+gt6.@distro@) @distro@; urgency=low
+
+  * Threaded test fixes
+
+ -- Globus Toolkit <support@globus.org>  Mon, 01 Jun 2015 17:23:05 -0400
+
 globus-gssapi-gsi (11.16-1+gt6.@distro@) @distro@; urgency=low
 
   * Update autoconf script
